# parallal-raytracer

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Generator.cpp  Generator.h  Light.cpp  Light.h  Material.cpp  Material.h  Primitive.cpp  Primitive.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  Serializer.cpp  Serializer.h  Sphere.cpp  Sphere.h  main.cpp  mpi.slurm  raytracer.slurm  test.tga  test1.tga  test_sans_recursion.tga  test_sans_reflexion.tga  utils.h
